# Insert

./: .gitattributes  .gitignore  Cargo.toml  README.md  pong.avif  quineRun.sh  rust-toolchain.toml  test.mjs
docs/: architecture.md  getting-started.md  language-guide.md  self-modifying-code.md
src/: main.rs
src/codegen/: c.rs  mod.rs  token.rs
src/mir/: display.rs  drop.rs  expr.rs  function.rs  label.rs  mangle.rs  mod.rs  opt.rs  quine.rs  scope.rs  type_check.rs  var.rs
src/parser/: file_cache.rs  mod.rs  program.pest  span.rs
src/targets/: mod.rs
src/util/: name.rs
std/: main.int  print.int  quine.int  string.int
test/: ball.int  const.int  fn_types.int  overloading.int  place.int  recursive.sll
test/snapshots/: array-opt.stdout  array-parse.stdout  array-target-fancy.stdout  array-target.stdout  break-error-target.stderr  compound-opt.stdout  compound-parse.stdout  compound-target-fancy.stdout  compound-target.stdout  const-opt.stdout  const-parse.stdout  const-target-fancy.stdout  const-target.stdout  extern-conflict-target.stderr  extern-opt.stdout  extern-parse.stdout  extern-target-fancy.stdout  extern-target.stdout  fn_types-opt.stdout  fn_types-parse.stdout  fn_types-target-fancy.stdout  fn_types-target.stdout  function-opt.stdout  function-parse.stdout  function-target-fancy.stdout  function-target.stdout  if-opt.stdout  if-parse.stdout  if-target-fancy.stdout  if-target.stdout  import1-opt.stdout  import1-parse.stdout  import1-target-fancy.stdout  import1-target.stdout  inline-opt-opt.stdout  inline-opt-parse.stdout  live-drops-opt.stdout  (+71 more)
(+42 files in other folders)
