[package]
name = "Insert"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = { version = "0.6.0", features = ["auto-color"] }
clap = { version = "4.5.54", features = ["derive"] }
include_dir = "0.7.4"
num-traits = "0.2.19"
parking_lot = "0.12.5"
pest = "2.8.4"
pest_derive = "2.8.4"
slotmap = "1.1.1"
smallvec = { version = "2.0.0-alpha.1", features = ["specialization"] }
